fixing text alignment and color isues

--- a/resoruces/main.css
+++ b/resoruces/main.css
@@ -11,7 +11,8 @@ body{
     margin: auto;
     box-sizing: border-box;
     background-color: var(--dark-blue);
-    max-width: 600px;
+    max-width: 1000px;
+    min-width: 360px;
 }
 
 .navbar-brand,.nav-item{
@@ -49,13 +50,8 @@ body{
   border-radius: 0 3px 3px 0;
   cursor: pointer;
   background-color: rgba(141, 45, 125, 0.5);
-  max-height: 100%;
-  height: 32vh;
+  height: 100%;
   
-}
-
-.prev img, .next img{
-    margin: 90px 10px;
 }
 
 .next{
@@ -65,6 +61,7 @@ body{
 }
 
 #left-arrow,#right-arrow{
+    max-width:100%;
     width:30%;
     filter: invert(87%) sepia(100%) saturate(19%) hue-rotate(311deg) brightness(108%) contrast(109%);
 }
@@ -93,22 +90,45 @@ body{
     margin: auto auto;
 }
 
-.card{
-    width:auto !important;
-    background-color: transparent !important;
-}
-
 #discount{
+    position: absolute;
     color: var(--green);
     background-color: var(--grey);
+    padding: 10px;
+    width: 25%;
+}
+
+.card{
+    margin-top:10px;
+    background-color: transparent;
+}
+
+.card-title {
+    margin-bottom: var(--bs-card-title-spacer-y);
+    color: var(--bs-card-title-color);
+    width:200px;
+    max-width: 100%;
+    margin: auto;
 }
 
 .card-body{
-    background-color: var(--grey) !important;
-    width:auto;
-    height: auto;
+    background-color: var(--grey);
+    color: var(--white);
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    
 }
 
-.card-text,.card-body{
-    color:var(--white);
+.card-text{
+    text-align: right;
+    background-color: var(--grey);
+    display: block;
+    color: var(--green);
 }
+
+#discount-price{
+    text-decoration: line-through;
+    opacity: 0.5;
+    color: var(--white);
+}
+
